# TODO-helper

./: .gitignore  README.md  pyproject.toml
calendar/: Makefile
calendar/note/: test-service.ipynb
calendar/src/: getics.py  oauthevents.py  quickstart.py
compose/: Makefile
compose-board-updates/: Makefile
compose-board-updates/src/: add-scheduled-meetings.py  doc.py  start-simple.py
compose-daily/: Makefile
compose-daily/src/: add-scheduled-meetings.py  add-scheduled-tasks.py  add-task-sections.py  doc.py  start-simple.py
compose-quarterly/: Makefile
compose-quarterly/hand/: template
compose-quarterly/src/: add-repo-activity.py  doc.py
compose-weekly/: Makefile
compose-weekly/output/: 2025-01-12.json  2025-01-12.md
compose-weekly/src/: add-repo-activity.py  add-scheduled-meetings.py  doc.py  start-simple.py
compose/frozen/: Bailey Passmore_m.bailey.passmore@gmail.com.ics
compose/hand/: groups.yml  rules.yml
compose/src/: add-scheduled-meetings.py  add-scheduled-tasks.py  daily.py  dev-new.ipynb  dev.ipynb  doc.py  line.py  start-simple.py
demo/: Makefile  README.md
demo/hand/: code-review.md
demo/note/: demo.ipynb  review.ipynb
demo/output/: active.parquet
import/: Makefile
import/src/: README.md  import.py
make-notes/note/: dev.ipynb
make-notes/src/: daily.py  doc.py  line.py
notes_app/note/: dev.ipynb
review/: collect_active.py
review-org-repos/: Makefile
review-org-repos/note/: explore_task.ipynb
review-org-repos/src/: clone.py  parse_summary.py  review_cloned.py  writecmd.py
templates/: day.md  line.py
(+10 files in other folders)
