[project]
name = "todo-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datetime>=6.0",
    "fastparquet>=2026.5.0",
    "holidays>=0.100",
    "icalendar>=7.2.0",
    "pandas>=3.0.3",
    "pip>=26.1.2",
    "pyyaml>=6.0.3",
    "recurring-ical-events>=3.8.2",
]
